@startuml

title __Restaurant DOMAIN's Class Diagram__\n

  package com.py.restaurants {
    package com.py.restaurants.restaurants.domain {
      class Category {
          - id : Long
          - name : String
          + Category()
          + toString()
          + getId()
          + getName()
          + Category()
          + setName()
      }
    }
  }
  

  package com.py.restaurants {
    package com.py.restaurants.restaurants.domain {
      class Restaurant {
          - id : Long
          - name : String
          - description : String
          - phone : String
          - latitude : double
          - longitude : double
          - deleted : boolean
          - categories : Set<Category>
          + Restaurant()
          + getLocation()
          + getId()
          + getName()
          + getDescription()
          + getPhone()
          + getLatitude()
          + getLongitude()
          + getSchedule()
          + isDeleted()
          + getCategories()
          {static} + builder()
          + Restaurant()
          + setName()
          + setDescription()
          + setPhone()
          + setLatitude()
          + setLongitude()
          + setSchedule()
          + setDeleted()
          + setCategories()
      }
    }
  }
  

  package com.py.restaurants {
    package com.py.restaurants.restaurants.domain {
      class RestaurantBuilder {
          - name : String
          - description : String
          - phone : String
          - latitude : double
          - longitude : double
          ~ RestaurantBuilder()
          + name()
          + description()
          + phone()
          + latitude()
          + longitude()
          + schedule()
          + build()
          + toString()
      }
    }
  }
  

  package com.py.restaurants {
    package com.py.restaurants.restaurants.domain {
      class Schedule {
          - id : Long
          + Schedule()
          + getId()
          + getWeekDays()
          + getWeekendDays()
          {static} + builder()
          + Schedule()
          + setId()
          + setWeekDays()
          + setWeekendDays()
      }
    }
  }
  

  package com.py.restaurants {
    package com.py.restaurants.restaurants.domain {
      class ScheduleBuilder {
          ~ ScheduleBuilder()
          + weekDays()
          + weekendDays()
          + build()
          + toString()
      }
    }
  }
  

  package com.py.restaurants {
    package com.py.restaurants.restaurants.domain {
      class TimeSlot {
          - openingHour : int
          - openingMinute : int
          - closingHour : int
          - closingMinute : int
          + TimeSlot()
          + getOpeningHour()
          + getOpeningMinute()
          + getClosingHour()
          + getClosingMinute()
          {static} + builder()
          + TimeSlot()
      }
    }
  }
  

  package com.py.restaurants {
    package com.py.restaurants.restaurants.domain {
      class TimeSlotBuilder {
          - openingHour : int
          - openingMinute : int
          - closingHour : int
          - closingMinute : int
          ~ TimeSlotBuilder()
          + openingHour()
          + openingMinute()
          + closingHour()
          + closingMinute()
          + build()
          + toString()
      }
    }
  }
  

  Restaurant o-- Schedule : schedule
  Restaurant +-down- RestaurantBuilder
  RestaurantBuilder o-- Schedule : schedule
  Schedule o-- TimeSlot : weekDays
  Schedule o-- TimeSlot : weekendDays
  Schedule +-down- ScheduleBuilder
  ScheduleBuilder o-- TimeSlot : weekDays
  ScheduleBuilder o-- TimeSlot : weekendDays
  TimeSlot +-down- TimeSlotBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
